--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -402,6 +402,9 @@
    "source": [
     "### Define your architecture here.\n",
     "### Feel free to use as many code cells as needed.\n",
+    "\n",
+    "### Below code has referred to myself stanford CS231N assignment2 codebase\n",
+    "\n",
     "from tensorflow.contrib.layers import xavier_initializer\n",
     "\n",
     "def alexnet(X, y, is_training, dropout_rate):  \n",
@@ -953,6 +956,8 @@
     "import numpy as np\n",
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
+    "## confusion matrix code refered to http://scikit-learn.org/stable/auto_examples/model_selection/plot_confusion_matrix.html\n",
+    "\n",
     "def plot_confusion_matrix(cm, classes,\n",
     "                          normalize=False,\n",
     "                          title='Confusion matrix',\n",
@@ -1027,7 +1032,8 @@
     "### Feel free to use as many code cells as needed.\n",
     "import matplotlib.image as mpimg\n",
     "from PIL import Image\n",
-    "# http://electronicimaging.spiedigitallibrary.org/data/journals/electim/927109/jei_22_4_041105_f010.png\n",
+    "\n",
+    "## image are downloaded from https://github.com/netaz/carnd_traffic_sign_classifier\n",
     "\n",
     "truth = []\n",
     "data_path = ['no_entry.jpg', 'right_turn.jpg', 'children_crossing.jpg', 'stop.jpg', 'no_truck_passing.jpg']\n",
